--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Index</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	</head>
-	<body>
-		<div class="container">
+{% extends 'base.html' %}
 
-			{% if messages %}
-				{% for message in messages %}				
-					<div class="alert {% if message.tags == 'success' %} alert-success {% else %} alert-danger {% endif %}">
-						<button type="button" class="close" data-dismiss="alert">x</button>
-						{{ message }}
-					</div>					
-				{% endfor %}
-			{% endif%}
-
-			<div class="row">
-				<div class="col">
-					<h1>{{ message }}</h1>
-				</div>
-			</div>
+{% block content %}
+	<div class="row">
+		<div class="col">
+			<h1>{{ message }}</h1>
 		</div>
-	</body>
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-	
-	<script src="{% static 'js/main.js' %}"></script>
-</html>
+	</div>
+{% endblock %}
