--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,49 +1,40 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Registro</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h2>Registro</h2>
-				<form method="post">
-					{% csrf_token %}					
-					<!--
-					<div class="form-group">
-						{{ form.username.label_tag }}
-						{{ form.username }}
-					</div>
+{% extends 'base.html' %}
 
-					<div class="form-group">
-						{{ form.email.label_tag }}
-						{{ form.email }}
-					</div>
-
-					<div class="form-group">
-						{{ form.password.label_tag }}
-						{{ form.password }}
-					</div>
-					-->
-
-					{% for field in form %}
-						<div class="form-group">
-							{{ field.label_tag }}
-							{{ field }}
-
-							{% if field.errors %}
-								{{ field.errors }}
-							{% endif %}
-
-						</div>
-					{% endfor %}
-					<button type="submit" class="btn btn-primary">Registrar</button>
-				</form>
-				
+{% block content %}
+	<div class="col">
+		<h2>Registro</h2>
+		<form method="post">
+			{% csrf_token %}					
+			<!--
+			<div class="form-group">
+				{{ form.username.label_tag }}
+				{{ form.username }}
 			</div>
-		</div>
+
+			<div class="form-group">
+				{{ form.email.label_tag }}
+				{{ form.email }}
+			</div>
+
+			<div class="form-group">
+				{{ form.password.label_tag }}
+				{{ form.password }}
+			</div>
+			-->
+
+			{% for field in form %}
+				<div class="form-group">
+					{{ field.label_tag }}
+					{{ field }}
+
+					{% if field.errors %}
+						{{ field.errors }}
+					{% endif %}
+
+				</div>
+			{% endfor %}
+			<button type="submit" class="btn btn-primary">Registrar</button>
+		</form>
+		
 	</div>
-</body>
-</html>
+{% endblock %}
