--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 {% url 'register' as register %}
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-	<a href="#" class="navbar-brand">Facilito Store</a>
+	<a href="{% url 'index' %}" class="navbar-brand">Facilito Store</a>
 
 	<button type="button" name="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navb">
 		<span class="navbar-toggler-icon"></span>
