--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 			
 			{% include 'messages.html' %}
 
-			<div class="row">
+			<div class="row mt-3">
 				
 				{% block content %}
 				{% endblock %}
