--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<div class="row">
-		<div class="col">
-			<h1>{{ message }}</h1>
-		</div>
+	<div class="col">
+		<h4 class="text-center">{{ message }}</h4>
+
+		{% include 'products/snippets/search.html' %}
+
+		{% include 'products/snippets/list.html' %}
+
 	</div>
 {% endblock %}
