Carrito de compras

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -14,5 +14,8 @@
 		<div class="">
 			<p>{{ product.description }}</p>
 		</div>
+		<div class="">
+			{% include 'carts/snippets/add.html' %}
+		</div>
 	</div>
 {% endblock %}
