--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,7 @@
 
 {% url 'login' as login %}
 {% url 'register' as register %}
+{% url 'carts:cart' as cart %}
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 	<a href="{% url 'index' %}" class="navbar-brand">Facilito Store</a>
@@ -10,6 +11,13 @@
 	</button>
 
 	<div id="navb" class="navbar-collapse collapse hide">
+
+		<ul class="navbar-nav">
+			<li class="nav-item{% if request.path == cart %} active {% endif %}">
+				<a class="nav-link" href="{{ cart }}">Mi carrito <span class="fas fa-shopping-cart"></span> </a>
+			</li>
+		</ul>
+
 		<ul class="nav navbar-nav ml-auto">
 			{% if user.is_authenticated %}
 				<li class="navbar-item">
