--- a/carts/templates/carts/add.html
+++ b/carts/templates/carts/add.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load product_extras %}
+
 {% block content %}
 	<div class="col-3">
 		{% if product.image %}
@@ -16,7 +18,7 @@
 			</a>		
 		</div>
 		<div class="font-weight-bold text-danger">
-			${{ product.price }}
+			{{ product.price|price_format }}
 		</div>
 	</div>
 {% endblock %}
