--- a/carts/templates/carts/cart.html
+++ b/carts/templates/carts/cart.html
@@ -1,5 +1,47 @@
 {% extends 'base.html' %}
 
+{% load product_extras %}
+
 {% block content %}
-<h2>Carrito de compras</h2>
+	{% if cart.products.exists %}
+		<div class="col-8">
+			<table class="table">
+				<thead>
+					<tr>
+						<th scope="col"></th>
+						<th scope="col"></th>
+						<th scope="col"></th>
+						<th scope="col">Cantidad</th>
+						<th scope="col">Precio</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for product in cart.products.all %}
+						<th>{{ forloop.counter }}</th>
+						<th>
+							{% if product.image %} 
+								<img src="{{ product.image.url }}" alt="Imagen de producto" width="60" height="60">
+							{% endif%}
+						</th>
+						<th>
+							<a href="{% url 'products:product' product.slug%}">{{ product.title }}</a>
+							{% include 'carts/snippets/remove.html' %}
+						</th>
+						<th>1</th>
+						<th>
+							<span class="font-weight-bold text-danger">{{ product.price|price_format }}</span>
+						</th>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	{% else %}
+		<div class="col">
+			<p class="h3">Tu carrito de compras está vacío</p>
+			<a href="{% url 'index' %}">Seguir comprando</a>
+		</div>
+	{% endif %}
+	<div class="col">
+		
+	</div>
 {% endblock %}
