--- a/carts/templates/carts/cart.html
+++ b/carts/templates/carts/cart.html
@@ -16,24 +16,40 @@
 					</tr>
 				</thead>
 				<tbody>
-					{% for product in cart.products.all %}
-						<th>{{ forloop.counter }}</th>
-						<th>
-							{% if product.image %} 
-								<img src="{{ product.image.url }}" alt="Imagen de producto" width="60" height="60">
-							{% endif%}
-						</th>
-						<th>
-							<a href="{% url 'products:product' product.slug%}">{{ product.title }}</a>
-							{% include 'carts/snippets/remove.html' %}
-						</th>
-						<th>1</th>
-						<th>
-							<span class="font-weight-bold text-danger">{{ product.price|price_format }}</span>
-						</th>
+					{% for cp in cart.cartproducts_set.all %}
+						{% with product=cp.product %}
+							<tr>
+								<th>{{ forloop.counter }}</th>
+								<th>
+									{% if product.image %} 
+										<img src="{{ product.image.url }}" alt="Imagen de producto" width="60" height="60">
+									{% endif%}
+								</th>
+								<th>
+									<a href="{% url 'products:product' product.slug %}">{{ product.title }}</a>
+									{% include 'carts/snippets/remove.html' %}
+								</th>
+								<th>{{ cp.quantity }}</th>
+								<th>
+									<span class="font-weight-bold text-danger">{{ product.price|price_format }}</span>
+								</th>
+							</tr>
+						{% endwith %}
 					{% endfor %}
 				</tbody>
 			</table>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="font-weight-bold">
+						Subtotal({{ cart.products.count }}): <span class="text-danger">{{ cart.subtotal|price_format }}</span>
+					</div>
+					<div class="mt-2">
+						<a href="#" class="btn btn-warning">Proceder al pago</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	{% else %}
 		<div class="col">
@@ -41,7 +57,5 @@
 			<a href="{% url 'index' %}">Seguir comprando</a>
 		</div>
 	{% endif %}
-	<div class="col">
-		
-	</div>
+	
 {% endblock %}
