--- a/carts/templates/carts/snippets/add.html
+++ b/carts/templates/carts/snippets/add.html
@@ -7,7 +7,7 @@
 		<button type="button" class="btn btn-info" id="add">+</button>
 	</div>
 	<div class="mt-2">
-		<button type="submit" class="btn btn-warning">Agregar al carrito</button>
+		<button type="submit" class="btn btn-warning">Agregar al carrssdsdito</button>
 	</div>
 </form>
 
